--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
 </body>
 <script src="{% static "game/js/csrf.js" %}"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', ready);
+    document.addEventListener('load', ready);
     function ready() {
         function ready() {
         var xhr = new XMLHttpRequest();
