--- a/templates/home.html
+++ b/templates/home.html
@@ -50,7 +50,10 @@
         <ul id="winners" class="list-group"></ul>
     </div>
 </body>
-<script src="{% static 'game/js/jquery.js' %}"></script>
+<script
+  src="https://code.jquery.com/jquery-1.9.1.js"
+  integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA="
+  crossorigin="anonymous"></script>
 <script>
     document.addEventListener('load', ready);
     function ready() {
