--- a/templates/home.html
+++ b/templates/home.html
@@ -54,6 +54,7 @@
   src="https://code.jquery.com/jquery-1.9.1.js"
   integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA="
   crossorigin="anonymous"></script>
+<script src="{% static 'game/js/csrf.js' %}"></script>
 <script>
     document.addEventListener('load', ready);
     function ready() {
