--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,7 @@
     </div>
     <div id="lottery">
         <button id="start-game" class="btn btn-primary btn-lg">Lottery!</button>
+        <p id="lottery-error"></p>
         <ul id="winners" class="list-group"></ul>
     </div>
 </body>
@@ -143,6 +144,7 @@
 		request.done(function(data){
 		    if(data.error){
 		        console.log(data.error);
+		        $('#lottery-error').html(`${data.error.type}: ${data.error.message}`);
             }
 			else{
 		        console.log(data);
